# fiap_tech_cha_fase4

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entenda_pipeline_lstm.html  pyproject.toml  requirements.txt  vercel.json
api/: index.py
models/experiments/E02_LKB_20/: model.onnx
models/experiments/E03_LKB_90/: metadata.json  model.onnx
models/experiments/E04_TGT_RAW/: metadata.json  model.onnx
models/experiments/E06_FTR_TECH/: metadata.json
models/experiments/E07_H_128/: model.onnx
models/experiments/E08_LAYERS_2/: model.onnx
models/experiments/E09_LR_003/: metadata.json  model.onnx
models/experiments/F1_LKB_05/: metadata.json  model.onnx
models/experiments/F1_LKB_10/: model.onnx
models/experiments/F1_LKB_20/: metadata.json
models/experiments/F1_LKB_30/: metadata.json  model.onnx
models/experiments/F1_LKB_75/: metadata.json  model.onnx
models/experiments/F2_TGT_log_returns_LKB_10/: metadata.json
models/experiments/F2_TGT_log_returns_LKB_60/: model.onnx
models/experiments/F2_TGT_raw_close_LKB_10/: metadata.json  model.onnx
models/experiments/F2_TGT_returns_LKB_10/: metadata.json  model.onnx
models/experiments/F2_TGT_returns_LKB_60/: metadata.json  model.onnx
models/experiments/F3_FTR_ohlcv/: metadata.json  model.onnx
models/experiments/F3_FTR_ohlcv_returns/: model.onnx
models/experiments/F3_FTR_technical_features/: model.onnx
models/experiments/F4_1_H_128/: metadata.json  model.onnx
models/experiments/F4_1_H_32/: model.onnx
models/experiments/F4_2_L_2/: model.onnx
models/experiments/F4_3_D_01/: model.onnx
models/experiments/F4_3_D_03/: model.onnx
models/experiments/F4_4_LR_00001/: model.onnx
models/experiments/F4_4_LR_00003/: model.onnx
models/experiments/F5_PER_10Y/: metadata.json  model.onnx
models/experiments/F5_PER_2Y/: metadata.json  (+1 more)
models/lstm_petr4/: history.json  metadata.json  metrics.json  model.onnx  model.onnx.data  model.safetensors  preprocessor.joblib  test_predictions.csv
models/lstm_petr4_multi/: history.json  metadata.json  metrics.json  model.onnx  model.onnx.data  model.safetensors  preprocessor.joblib  test_predictions.csv
notebooks/: README.md  model_development_v8_corrigido.ipynb  pipeline_sandbox.ipynb  pipeline_sandbox_refatorado.ipynb  pipeline_sandbox_simplificado.ipynb
scratch/: playwright_portal_smoke.js  take_screenshots.py
src/: api.py  dashboard.html  data_loader.py  features.py  mlflow.db  model.py  model_card_template.json  model_development_v6.ipynb  model_development_v7_alinhado.ipynb  model_development_v8_corrigido.ipynb  train.py  train_cli.py  tune.py
src/frontend/: app.js  index.html  main.js  styles.css
src/stock_lstm/: api.py  config.py  data_loader.py  model.py  predict.py  preprocessing.py  train.py  utils.py
src/train/: __init__.py  artifacts.py  champion_selection.py  config.py  data_prep.py  pipeline.py  trainer.py
tests/: conftest.py  test_api.py  test_data_loader.py  test_model.py  test_train.py  test_tune.py
(+10 files in other folders)
