[tool.poetry]
name = "tech-challenge-lstm"
version = "0.1.0"
description = "Tech Challenge Fase 4 - LSTM para previsão de fechamento de ações"
authors = ["Wilder"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pandas = "^2.2.0"
scikit-learn = "^1.5.0"
joblib = "^1.4.0"
torch = { version = ">=2.2,<3.0", source = "pytorch-cu121" }
yfinance = "^0.2.50"
mlflow = "^3.0.0"
matplotlib = "^3.9.0"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.0"
psutil = "^7.0.0"
prometheus-fastapi-instrumentator = "^7.0.0"
python-dotenv = "^1.2.2"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ipykernel = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
