[tool.poetry]
name = "tech-challenge-lstm"
version = "0.1.0"
description = "Tech Challenge Fase 4 - LSTM para previsão de fechamento de ações"
authors = ["Wilder"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pandas = "^2.2.0"
scikit-learn = "^1.5.0"
joblib = "^1.4.0"
fastapi = "^0.136.1"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.0"
psutil = "^7.0.0"
prometheus-fastapi-instrumentator = "^7.0.0"
python-dotenv = "^1.2.2"
onnxruntime = "^1.18.0"
safetensors = "^0.7.0"

[tool.poetry.group.train.dependencies]
torch = { version = ">=2.2,<3.0", source = "pytorch-cu128" }
yfinance = "^0.2.50"
mlflow = "^3.0.0"
matplotlib = "^3.9.0"
onnx = "^1.21.0"
onnxscript = "^0.7.0"

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3,<10.0"
ipykernel = "^7.2.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
filterwarnings = [
  "ignore::FutureWarning",
  "ignore::UserWarning",
  "ignore::DeprecationWarning",
  "ignore:Converting a tensor to a Python boolean"
]
